--- a/config_pai.yaml
+++ b/config_pai.yaml
@@ -25,7 +25,7 @@ taskRoles:
       - cd Pytorch_Retinaface
       - ln -s /mnt/nfs-storage/users/sgx/Retinaface/weights /Pytorch_Retinaface
       - ln -s /mnt/nfs-storage/users/sgx/Retinaface/data/widerface /Pytorch_Retinaface/data
-      - pip install opencv-python Cython ipython
+      - python3 -m pip install opencv-python Cython ipython
       - python3 pruning.py --sparsity 0.3 --cool-down-rate 0.9 --experiment-data-dir /mnt/nfs-storage/users/sgx/Retinaface/experiment_data/03/ 
 defaults:
   virtualCluster: default
