--- a/pruning_pai.yaml
+++ b/pruning_pai.yaml
@@ -1,5 +1,5 @@
 protocolVersion: 2
-name: RetinaFace_Auto_Compression_test_test
+name: RetinaFace_Auto_Compression
 type: job
 jobRetryCount: 0
 prerequisites:
@@ -25,8 +25,9 @@ taskRoles:
       - cd Pytorch_Retinaface
       - ln -s /mnt/nfs-storage/users/sgx/Retinaface/weights /Pytorch_Retinaface
       - ln -s /mnt/nfs-storage/users/sgx/Retinaface/data/widerface /Pytorch_Retinaface/data
-      - python3 -m pip install opencv-python Cython ipython
-      - python3 pruning.py --sparsity 0.3 --cool-down-rate 0.9 --experiment-data-dir /mnt/nfs-storage/users/sgx/Retinaface/experiment_data/03/ 
+      - python3 -m pip install opencv-python Cython ipython tensorboard
+      - python3 pruning.py --sparsity 0.3 --pruner NetAdaptPruner --cool-down-rate 0.9 --experiment-data-dir /mnt/nfs-storage/users/sgx/Retinaface/experiment_data/NetAdaptPruner/03/ --fine_tune 1
+      - python3 pruning.py --sparsity 0.3 --pruner SimulatedAnnealingPruner --cool-down-rate 0.9 --experiment-data-dir /mnt/nfs-storage/users/sgx/Retinaface/experiment_data/SimulatedAnnealingPruner/03/ --fine_tune 1
 defaults:
   virtualCluster: default
 extras:
